Added audio module and updated coin catcher

--- a/demos/CoinCatcher/index.html
+++ b/demos/CoinCatcher/index.html
@@ -13,7 +13,7 @@
         <script type="module" src="game.js"></script>
         </canvas>
         <p>A simple Coin Collecting game</p>
-        <p>made using Canvas++ v0.3</p>
+        <p>made using Canvas++ v1-beta</p>
     </div>
 </body>
 </html>
